@@ -22,6 +22,9 @@ GNU coreutils NEWS                                    -*- outline -*-
   it would display an error, requiring --no-dereference to avoid the issue.
   [bug introduced in coreutils-5.3.0]
 
+  shuf -r no longer dumps core if the input is empty.
+  [bug introduced in coreutils-8.22]
+
 ** New features
 
   od accepts a new option: --endian=TYPE to handle inputs with different byte
